add $ for commands

--- a/vm-monit.html.md.erb
+++ b/vm-monit.html.md.erb
@@ -10,7 +10,7 @@ The Agent on each deployment job VM is responsible for managing lifecycle of eac
 Assuming you have a deployment, run `bosh vms` to see aggregate status for each deployment job VM:
 
 <pre class="terminal">
-bosh vms
+$ bosh vms
 
 Deployment `my-deployment'
 
@@ -49,7 +49,8 @@ Each enabled release job has its own directory in `/var/vcap/jobs/` directory. E
 To view status for all processes Monit is managing you can run `monit summary`:
 
 <pre class="terminal">
-monit summary
+$ monit summary
+
 The Monit daemon 5.2.4 uptime: 1d 22h 7m
 
 Process 'nats'                      running
@@ -73,7 +74,8 @@ System 'system_bm-24638eb6-55b9-4670-bb1a-23c9e3f77d91' running
 You can also get more detailed information about individual processes via `monit status`:
 
 <pre class="terminal">
-monit status
+$ monit status
+
 The Monit daemon 5.2.4 uptime: 1d 22h 8m
 
 Process 'nats'
