--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -9,147 +9,147 @@ This document lists the all CLI commands you use to perform system administratio
 
 Use these commands against the Director to manage deployments and associated assets.
 
-### <a id="director"></a>Director Location
+### <a id="director"></a> Director Location
 
-<pre class="terminal">bosh target [DIRECTOR_URL] [ALIAS]</pre>
+<pre class="terminal">$ bosh target [DIRECTOR_URL] [ALIAS]</pre>
 Connects to the Director URL/IP that you specify for ongoing communication. You can provide `ALIAS` to set an alias for the Director. Displays the currently targeted Director if you do not provide a URL.
 
-<pre class="terminal">bosh login [USERNAME] [PASSWORD]</pre>
+<pre class="terminal">$ bosh login [USERNAME] [PASSWORD]</pre>
 Authenticates a user with the Director when you provide a username and password. Prompts for this information if you omit it.
 
-<pre class="terminal">bosh status [--uuid]</pre>
+<pre class="terminal">$ bosh status [--uuid]</pre>
 Displays the configuration file and deployment manifest in use, and information about the BOSH Director such as name, URL, version, current username, UUID, and CPI.
 
 ---
-### <a id="user"></a>Users
+### <a id="user"></a> Users
 
 Use these commands to create and delete users on the Director.
 
-<pre class="terminal">bosh create user [USERNAME] [PASSWORD]</pre>
+<pre class="terminal">$ bosh create user [USERNAME] [PASSWORD]</pre>
 Creates a user with the Director. Prompts you for a `USERNAME` and `PASSWORD` if you omit this information.
 
-<pre class="terminal">bosh delete user [USERNAME]</pre>
+<pre class="terminal">$ bosh delete user [USERNAME]</pre>
 Deletes a specific user from the BOSH Director. Prompts you for a `USERNAME` if you omit this information.
 
 ---
 ### <a id="dir-release"></a> Releases
 
-<pre class="terminal">bosh releases [--jobs]</pre>
+<pre class="terminal">$ bosh releases [--jobs]</pre>
 Displays the list of available releases.
 
-<pre class="terminal">bosh upload release [RELEASE_FILE] [--rebase] [--skip-if-exists]</pre>
+<pre class="terminal">$ bosh upload release [RELEASE_FILE] [--rebase] [--skip-if-exists]</pre>
 Uploads the file that you specify as a release. If you do not provide a `RELEASE_FILE`, you must run this command from a valid release directory.
 
-<pre class="terminal">bosh delete release NAME [VERSION] [--force]</pre>
+<pre class="terminal">$ bosh delete release NAME [VERSION] [--force]</pre>
 Deletes a release and associated jobs, packages, compiled packages, and all package metadata. Fails if a deployment references this release.
 
 ---
 ### <a id="dir-stemcells"></a> Stemcells
 
-<pre class="terminal">bosh stemcells</pre>
+<pre class="terminal">$ bosh stemcells</pre>
 Displays the name, version, and CID of available stemcells.
 
-<pre class="terminal">bosh upload stemcell STEMCELL_LOCATION [--skip-if-exists]</pre>
+<pre class="terminal">$ bosh upload stemcell STEMCELL_LOCATION [--skip-if-exists]</pre>
 Uploads the stemcell that you specify. `STEMCELL_LOCATION` can be a local file path or a remote URL.
 
-<pre class="terminal">bosh delete stemcell NAME VERSION [--force]</pre>
+<pre class="terminal">$ bosh delete stemcell NAME VERSION [--force]</pre>
 Deletes a stemcell and all associated compiled packages. Fails if any deployment references this stemcell.
 
-<pre class="terminal">bosh public stemcells [--full] [--all]</pre>
+<pre class="terminal">$ bosh public stemcells [--full] [--all]</pre>
 Displays a list of available public stemcells. Alternatively use [BOSH Artifacts](http://bosh-artifacts.cfapps.io) to see all available stemcells.
 
-<pre class="terminal">bosh download public stemcell STEMCELL_FILENAME</pre>
+<pre class="terminal">$ bosh download public stemcell STEMCELL_FILENAME</pre>
 Downloads the stemcell that you specify from the public blobstore to the machine running the CLI.
 
 ---
 ### <a id="deployment"></a> Deployment
 
-<pre class="terminal">bosh deployments</pre>
+<pre class="terminal">$ bosh deployments</pre>
 Displays the list of created deployments on the Director. Shows stemcells and releases used by each deployment.
 
-<pre class="terminal">bosh deployment [FILE_PATH]</pre>
+<pre class="terminal">$ bosh deployment [FILE_PATH]</pre>
 Switches the CLI to operate on the deployment specified by the deployment manifest `FILE_PATH`. Displays the current deployment if you omit `FILENAME`.
 
-<pre class="terminal">bosh deploy [--recreate]</pre>
+<pre class="terminal">$ bosh deploy [--recreate]</pre>
 Creates/updates or recreates a deployment.
 
-<pre class="terminal">bosh download manifest DEPLOYMENT_NAME [FILE_PATH]</pre>
+<pre class="terminal">$ bosh download manifest DEPLOYMENT_NAME [FILE_PATH]</pre>
 Downloads and saves the deployment manifest of the deployment `DEPLOYMENT_NAME` to `FILE_PATH`.
 
-<pre class="terminal">bosh delete deployment DEPLOYMENT_NAME [--force]</pre>
+<pre class="terminal">$ bosh delete deployment DEPLOYMENT_NAME [--force]</pre>
 Deletes job instances, VMs, disks, snapshots, templates associated with the deployment `DEPLOYMENT_NAME`.
 
 ---
 ### <a id="health"></a> Job/VM Health
 
-<pre class="terminal">bosh vms [DEPLOYMENT_NAME] [--details] [--dns] [--vitals]</pre>
+<pre class="terminal">$ bosh vms [DEPLOYMENT_NAME] [--details] [--dns] [--vitals]</pre>
 Displays a table that provides an overview of the VMs in `DEPLOYMENT_NAME`. You can specify the following options:
 
 - **Details**: Includes Cloud ID, Agent ID, and the status of the BOSH Resurrector for each VM.
 - **DNS**: Includes the DNS A record for each VM.
 - **Vitals**: Includes load, CPU, memory, swap, system disk, ephemeral disk, and persistent disk usage for each VM.
 
-<pre class="terminal">bosh recreate JOB [INDEX] [--force]</pre>
+<pre class="terminal">$ bosh recreate JOB [INDEX] [--force]</pre>
 Stops the job process, power cycles the VM, recreates the job instance, then restarts the job process.
 
 <a id="vm-resurrection"></a>
 
-<pre class="terminal">bosh vm resurrection [STATE]</pre>
-<pre class="terminal">bosh vm resurrection JOB INDEX [STATE]</pre>
+<pre class="terminal">$ bosh vm resurrection [STATE]</pre>
+<pre class="terminal">$ bosh vm resurrection JOB INDEX [STATE]</pre>
 Sets resurrection state (`on` or `off`) for all VMs managed by the Director or for a single deployment job instance.
 
-<pre class="terminal">bosh cck [DEPLOYMENT_NAME] [--auto] [--report]</pre>
+<pre class="terminal">$ bosh cck [DEPLOYMENT_NAME] [--auto] [--report]</pre>
 Scans for differences between the VM state database that the Director maintains and the actual state of the VMs. For each difference the scan detects, `bosh cck` offers possible repair options.
 
 ---
 ### <a id="tasks"></a> Director Tasks
 
-<pre class="terminal">bosh tasks [--no-filter] </pre>
+<pre class="terminal">$ bosh tasks [--no-filter] </pre>
 Displays a table that lists the following for all _currently running_ tasks: ID number, state, timestamp, user, description, and result.
 
-<pre class="terminal">bosh tasks recent [COUNT] [--no-filter]</pre>
+<pre class="terminal">$ bosh tasks recent [COUNT] [--no-filter]</pre>
 Displays a table that lists the following for the last `COUNT` tasks: ID number, state, timestamp, user, description, and result. `COUNT` defaults to 30.
 
-<pre class="terminal">bosh task [TASK_ID] [--event] [--cpi] [--debug] [--result] [--raw]</pre>
+<pre class="terminal">$ bosh task [TASK_ID] [--event] [--cpi] [--debug] [--result] [--raw]</pre>
 Displays the status of a task that you specify and tracks its output. You can track only one of the following log types at a time: event, CPI, debug, or result. Defaults to event.
 
 ---
 ### <a id="ssh"></a> SSH
 
-<pre class="terminal">bosh ssh [--public_key FILE] [--gateway_host HOST] [--gateway_user USER] [--gateway_identity_file FILE] [--default_password PASSWORD]</pre>
+<pre class="terminal">$ bosh ssh [--public_key FILE] [--gateway_host HOST] [--gateway_user USER] [--gateway_identity_file FILE] [--default_password PASSWORD]</pre>
 When you provide arguments with an option flag, the BOSH Director starts an interactive session, passing the specified arguments to a job VM. For example, `bosh ssh --public_key mykey.pub` instructs the BOSH Director to launch an interactive session with a job VM and pass the specified key to the VM.
 
-<pre class="terminal">bosh ssh JOB [INDEX] [COMMANDS]</pre>
+<pre class="terminal">$ bosh ssh JOB [INDEX] [COMMANDS]</pre>
 When you provide arguments without an option flag, the Director executes the arguments as commands on the job VM. For example, `bosh redis ssh ls -R` runs the `ls -R` command on the redis job VM.
 
 ---
 ### <a id="logs"></a> Logs
 
-<pre class="terminal">bosh logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--dir DESTINATION_DIRECTORY]</pre>
+<pre class="terminal">$ bosh logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--dir DESTINATION_DIRECTORY]</pre>
 Fetches a job or agent log from a VM. Supports custom filtering only for job logs.
 
 ---
 ### <a id="errand"></a> Errands
 
-<pre class="terminal">bosh errands</pre>
+<pre class="terminal">$ bosh errands</pre>
 Displays a table that lists all available errands for the set deployment.
 
-<pre class="terminal">bosh run errand ERRAND_NAME [--download-logs] [--logs-dir DESTINATION_DIRECTORY]</pre>
+<pre class="terminal">$ bosh run errand ERRAND_NAME [--download-logs] [--logs-dir DESTINATION_DIRECTORY]</pre>
 Instructs the BOSH Director to run the named errand on a job instance on a VM.
 
 ---
 ### <a id="snapshots"></a> Snapshots
 
-<pre class="terminal">bosh snapshots</pre>
+<pre class="terminal">$ bosh snapshots</pre>
 Displays the job, CID, and created date of all snapshots.
 
-<pre class="terminal">bosh delete snapshots</pre>
+<pre class="terminal">$ bosh delete snapshots</pre>
 Deletes all snapshots.
 
-<pre class="terminal">bosh delete snapshot SNAPSHOT_CID</pre>
+<pre class="terminal">$ bosh delete snapshot SNAPSHOT_CID</pre>
 Deletes a snapshot.
 
-<pre class="terminal">bosh take snapshot [JOB] [INDEX]</pre>
+<pre class="terminal">$ bosh take snapshot [JOB] [INDEX]</pre>
 Takes a snapshot of the job VM that you specify. If you do not specify a `JOB`, takes a snapshot of every VM in your deployment.
 
 ---
@@ -159,13 +159,13 @@ Use these commands against the Director to create and update releases.
 
 ### <a id="main-release"></a> Release Creation
 
-<pre class="terminal">bosh create release [MANIFEST_FILE] [--force]</pre>
+<pre class="terminal">$ bosh create release [MANIFEST_FILE] [--force]</pre>
 Creates a dev release.
 
-<pre class="terminal">bosh create release [MANIFEST_FILE] --final [--version VERSION] [--with-tarball] [--force] </pre>
+<pre class="terminal">$ bosh create release [MANIFEST_FILE] --final [--version VERSION] [--with-tarball] [--force] </pre>
 Creates a final release.
 
 ### <a id="blobs"></a> Blobs
 
-<pre class="terminal">bosh upload blobs</pre>
+<pre class="terminal">$ bosh upload blobs</pre>
 Uploads new and updated blobs to the blobstore.
