--- a/install-bosh-init.html.md.erb
+++ b/install-bosh-init.html.md.erb
@@ -35,7 +35,7 @@ Here are the latest binaries:
 	**Ubuntu Trusty**
 
 	<pre class="terminal">
-	$ sudo apt-get install -y build-essential zlibc zlib1g-dev openssl libxslt-dev libxml2-dev libssl-dev libreadline6 libreadline6-dev libyaml-dev libsqlite3-dev sqlite3
+	$ sudo apt-get install -y build-essential zlibc zlib1g-dev ruby ruby-dev openssl libxslt-dev libxml2-dev libssl-dev libreadline6 libreadline6-dev libyaml-dev libsqlite3-dev sqlite3
 	</pre>
 
 	**CentOS**
