added building stemcell docs

--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -36,7 +36,7 @@ Director workers take tasks from the Task Queue and act on them.
 
 ### <a id="cpi"></a>Cloud Provider Interface (CPI)
 
-A Cloud Provider Interface (CPI) is an API that the Director uses to interact with an Infrastructure as a Service (IaaS) provider to create and manage stemcells, VMs, and disks. A CPI abstracts the cloud infrastructure from the rest of BOSH.
+A Cloud Provider Interface (CPI) is an API that the Director uses to interact with an IaaS to create and manage stemcells, VMs, and disks. A CPI abstracts infrastructure differences from the rest of BOSH.
 
 ---
 ## <a id="health-monitor"></a>Health Monitor
