--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -121,4 +121,4 @@ title: Index
  * [Building a CPI](build-cpi.html)
     * [CPI API v1](cpi-api-v1.html)
     * Interactions between CPIs and BOSH Agent
- * Building a stemcell
+ * [Building a stemcell](build-stemcell.html)
