--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -37,7 +37,7 @@ network:
 resources:
   persistent_disk: 20000
   cloud_properties:
-    instance_type: m1.small
+    instance_type: m3.xlarge
     availability_zone: AVAILABILITY-ZONE # Replace with your Availability Zone
 
 cloud:
