add metadata arg to snapshot_disk

--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -468,6 +468,7 @@ Takes a snapshot of the disk.
 #### Arguments
 
 - **disk_cid** [String]: Cloud ID of the disk.
+- **metadata** [Hash]: Collection of key-value pairs. CPI should not rely on presence of specific keys.
 
 #### Returned
 
