add GitHub Spiff repo link to workflow.html

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -70,7 +70,8 @@ You can obtain a release from a software provider, or create one yourself.
 You obtain a stemcell from the [public download site](http://bosh-artifacts.cfapps.io).
 
 * A **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
-You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
+You can modify an example manifest to suit your purposes, or use a tool like 
+[spiff](https://github.com/cloudfoundry-incubator/spiff) to create a manifest.
 
 <p class="note"><strong>Note</strong>: This topic speaks of "a release" and "a stemcell" for the sake of simplicity,
 but BOSH also supports deploying with multiple releases and multiple stemcells.</p>
