--- a/init-vcloud.html.md.erb
+++ b/init-vcloud.html.md.erb
@@ -16,17 +16,14 @@ This document shows how to initialize new [environment](terminology.html#environ
 
     <p class="note"><strong>Note</strong>: The example below uses several predefined password. We recommend to replace them with passwords of your choice.</p>
 
-```yaml
+<pre>
 ---
 name: bosh
 
-releases:
-- name: bosh
-  url: https://bosh.io/d/github.com/cloudfoundry/bosh?v=184
-  sha1: 0209fdd72820ceed717e792988fe4b4984eb0e98
-- name: bosh-vcloud-cpi
-  url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-vcloud-cpi-release?v=10
-  sha1: d6481941887672c873b01cb9bbf72bc7dcef1100
+releases:{{ range .Releases }}
+- name: {{ .Name }}
+  url: {{ .UserVisibleDownloadURL }}
+  sha1: {{ .TarballSHA1 }}{{ end }}
 
 resource_pools:
 - name: vms
@@ -138,7 +135,7 @@ cloud_provider:
     agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
-```
+</pre>
 
 ---
 ## <a id="prepare"></a> Step 2: Prepare a vCloud Environment
