nested\_hardware\_virtualization

--- a/vsphere-cpi.html.md.erb
+++ b/vsphere-cpi.html.md.erb
@@ -34,7 +34,7 @@ Schema for `cloud_properties` section:
 * **cpu** [Integer, required]: Number of CPUs. Example: `1`.
 * **ram** [Integer, required]: RAM in megabytes. Example: `1024`.
 * **disk** [Integer, required]: Ephemeral disk size in megabytes. Example: `10240`.
-* **nested_hardware_virtualization** [Boolean, optional]: Exposes hardware assisted virtualization to the VM. Default: `false`.
+* **nested\_hardware\_virtualization** [Boolean, optional]: Exposes hardware assisted virtualization to the VM. Default: `false`.
 
 * **datacenters** [Array, optional]: Array of datacenters to use for VM placement. Must have only one and it must match datacenter configured in global CPI options.
     * **name** [String, required]: Datacenter name.
