change 'information on' to 'information about'

--- a/uploading-releases.html.md.erb
+++ b/uploading-releases.html.md.erb
@@ -35,7 +35,7 @@ Assuming that the CLI is already targeted at the Director, the CLI provides a si
 
 - If you cloned a Git repository:
 
-    Note that all release repositories have a `releases/` folder that contains release YAML files. These files have all the required information on how to assemble a specific version of a release (provided that the release maintainers produce and commit that version to the repository). You can use the YAML files to either directly upload a release, or to create a release tarball locally and then upload it.
+    Note that all release repositories have a `releases/` folder that contains release YAML files. These files have all the required information about how to assemble a specific version of a release (provided that the release maintainers produce and commit that version to the repository). You can use the YAML files to either directly upload a release, or to create a release tarball locally and then upload it.
 
     <pre class="terminal">
 	$ cd ~/workspace/redis-boshrelease
