change 'cancelling' to 'canceling'

--- a/director-tasks.html.md.erb
+++ b/director-tasks.html.md.erb
@@ -69,9 +69,9 @@ D, [2015-01-27 21:33:21 #2725] [] DEBUG -- DirectorJobRunner: (0.001125s) SELECT
 ...snip...
 </pre>
 
-### <a id="cancel-active"></a> Cancelling tasks
+### <a id="cancel-active"></a> Canceling tasks
 
-Tasks can be cancelled before and while they are running. Cancelling an active task will not take immediate effect; however, the Director will stop task execution at a next safe checkpoint. To cancel a task, either press `Ctrl+C` while tracking the task or run:
+Tasks can be cancelled before and while they are running. Canceling an active task will not take immediate effect; however, the Director will stop task execution at a next safe checkpoint. To cancel a task, either press `Ctrl+C` while tracking the task or run:
 
 <pre class="terminal">
 $ bosh cancel task 766
