change 'configuraton' to 'configuration' in using-bosh-init.html

--- a/using-bosh-init.html.md.erb
+++ b/using-bosh-init.html.md.erb
@@ -8,7 +8,7 @@ bosh-init is used for creating and updating the Director (its VM and persistent 
 
 ## <a id='deploy-cmd'></a> Deploy command
 
-Deploy command takes a deployment manifest as its input and idempotently converges the VM to its desired configuraton:
+Deploy command takes a deployment manifest as its input and idempotently converges the VM to its desired configuration:
 
 - it may recreate a VM due to a stemcell difference, and
 - it may recreate persistent disks and migrate the data
