--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -96,4 +96,4 @@ Bosh::Clouds::VMCreationFailed
 
 This error is raised if OpenStack is unable to create a VM. That may happen because:
 
-- not enough resources (vCPUs, RAM, disk) to run the VM. For example if you have selected `m1.xlarge` flavor that uses 10 vCPUs and and you have 4 hypervisors and each one of them only has 3 vCPUs available, OpenStack is unable to start the VM anywhere even though, total vCPUs across all hypervisors is more than enough.
+- not enough resources (vCPUs, RAM, disk) to run the VM. For example if you have selected `m1.xlarge` flavor that uses 10 vCPUs and you have 4 hypervisors and each one of them only has 3 vCPUs available, OpenStack is unable to start the VM anywhere even though, total vCPUs across all hypervisors is more than enough.
