--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -15,7 +15,7 @@ title: Index
 ---
 ## <a id="install"></a> Installing BOSH
 
-### Installing BOSH with bosh-init **[beta]**
+### Installing BOSH with bosh-init
 
  * [BOSH components](bosh-components.html)
  * [Bootstrapping an environment](init.html)
@@ -24,13 +24,12 @@ title: Index
     * [On vSphere](init-vsphere.html)
     * [On vCloud](init-vcloud.html)
     * [On Local machine using BOSH Lite](bosh-lite.html)
- * bosh-init deploy step-by-step
  * [Install bosh-init](install-bosh-init.html)
  * [Using bosh-init](using-bosh-init.html)
     * [Migrating to bosh-init from the micro CLI plugin](migrate-to-bosh-init.html)
  * [Installing BOSH CLI](bosh-cli.html)
 
-### Installing BOSH with the micro CLI plugin
+### Installing BOSH with the micro CLI plugin **[deprecated, but supported]**
 
  * [Bootstrapping an environment](bootstrap.html)
     * [On AWS](deploy-microbosh-to-aws.html)
@@ -41,7 +40,6 @@ title: Index
        * Compatibility
     * On vCloud
     * [On Local machine using BOSH Lite](bosh-lite.html)
- * BOSH micro deploy step-by-step
 
 ### <a id="director-config"></a> Advanced configuration
 
