Additional error support when installing bosh_cli
Signed-off-by: Xuebin He <xuebin.he@emc.com>

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -73,6 +73,10 @@ Use this table to resolve the errors listed on the left with the corresponding c
     <td>checking for mysql_query() ... no</td>
     <td><code class="terminal">$ sudo apt-get install libmysqlclient-dev</code></td>
   </tr>
+  <tr>
+    <td>zlib is missing; necessary for building libxml2</td>
+    <td><code class="terminal">$ sudo apt-get install zlib1g-dev</code></td>
+  </tr>
 </table>
 
 ### Prerequisites on CentOS
